[project]
name = "sqlagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.24",
    "langgraph>=0.4.3",
    "psycopg2-binary>=2.9.10",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]
